# vicat-home-bus

./: .env.example  .gitignore  AGENTS.md  Dockerfile  MEMORY.md  README.md  ROADMAP.md  TODO.md  apm.lock.yaml  apm.yml  config.toml.example  docker-compose.yml  main.py  pyproject.toml
.opencode/agents/: doc-drift-checker.md
.opencode/plugins/: doc-drift-hook.ts
.opencode/skills/doc-structure/: SKILL.md
.opencode/skills/git-workflow/: SKILL.md
.opencode/skills/record-adr/: SKILL.md
.opencode/skills/record-aha-moments/: SKILL.md
.opencode/skills/record-architecture/: SKILL.md
cli/: homebus.py
doc/: README.md  glossary.md
doc/c4/: README.md  c4-legend.md  component-cli.md  component-core.md  component-mcp.md  container.md  context.md
doc/prd/: homebus-v0.1.md
doc/research/: grocy-cli-assets.md
doc/rfcs/: rfc-001-config-format-change.md  rfc-002-pypi-publishing.md
doc/specs/: README.md  adapter-interfaces.md  api-contracts.md  architecture-planes.md  backend-boundaries.md  beancount-integration.md  cli-spec.md  config-paradigm.md  database-schema.md  event-types.md  homebus.md  routing-registry.md  sensitive-data.md
homebus/: aggregator.py  api.py  config.py  database.py  dispatch.py  executor.py  models.py  query_router.py  registry.py  saga.py  validators.py
homebus/adapters/: base.py  beancount.py  beancount_writer.py  grocy.py  homebox.py
homebus/migrations/: V001__initial_schema.sql
tests/: test_aggregator.py  test_database.py  test_dispatch.py  test_executor.py  test_models.py  test_registry.py  test_saga.py  test_validators.py
(+47 files in other folders)
