[project]
name = "vicat-home-bus"
version = "0.1.0"
description = "HomeBus — 家庭服务总线 (Family Service Bus)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "click>=8.4.2",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "uvicorn>=0.51.0",
]

[project.scripts]
homebus = "cli.homebus:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
